--- a/index.ipynb
+++ b/index.ipynb
@@ -94,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    1.5"
+    "    1.5*advertising + 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
