--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "data": [
         {
          "type": "scatter",
-         "uid": "9fbbd6a2-d493-11e9-832a-416218af6659",
+         "uid": "9a8e28ce-d493-11e9-832a-416218af6659",
          "x": [
           0,
           50,
@@ -221,10 +221,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"11a97324-1be4-448a-9ec8-621984c08bfc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"11a97324-1be4-448a-9ec8-621984c08bfc\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"9fc0f128-d493-11e9-832a-416218af6659\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"897fa188-a7fb-4df1-a817-14cfca0ea344\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"897fa188-a7fb-4df1-a817-14cfca0ea344\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"9ab4cf92-d493-11e9-832a-416218af6659\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"11a97324-1be4-448a-9ec8-621984c08bfc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"11a97324-1be4-448a-9ec8-621984c08bfc\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"9fc0f128-d493-11e9-832a-416218af6659\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"897fa188-a7fb-4df1-a817-14cfca0ea344\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"897fa188-a7fb-4df1-a817-14cfca0ea344\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"9ab4cf92-d493-11e9-832a-416218af6659\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -238,7 +238,8 @@
     "\n",
     "trace_of_attendance_with_friends = graph_objs.Scatter(\n",
     "    x=initial_sample_budgets,\n",
-    "    y=attendance_values,)\n",
+    "    y=attendance_values,\n",
+    ")\n",
     "\n",
     "plotly.offline.iplot([trace_of_attendance_with_friends])"
    ]
