--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = list(map(lambda x:x[x_values]))\n",
+    "    y_values = list(map(lambda x:x[x_values], ))\n",
     "    return m_b_data(x_values*m + b)"
    ]
   },
