--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x:m*x + b, x_values))\n",
-    "    return m_b_data(x_values*m + b)"
+    "    return {'x':}"
    ]
   },
   {
