--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    x_values = list(map(lambda ))"
+    "    x_values = list(map(lambda x:  m_b_data))"
    ]
   },
   {
