Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,7 +403,8 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    (first_show['budget'] - second_show['budget'])/"
+    "    (first_show['budget'] - second_show['budget'])/\n",
+    "    (first_show['atten'] - second_show['budget'])"
    ]
   },
   {
