--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    (first_show['budget'] - second_show['budget'])/\n",
-    "    (first_show['atten'] - second_show['budget'])"
+    "    (first_show['attendance'] - second_show['attendance'])"
    ]
   },
   {
