Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,7 @@
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (first_show['budget'] - second_show['budget'])/\n",
+    "    a = (first_show['budget'] - second_show['budget'])/\n",
     "    (first_show['attendance'] - second_show['attendance'])"
    ]
   },
