Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,8 +412,8 @@
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    a = (first_show['budget'] - second_show['budget'])/\n",
-    "    (first_show['attendance'] - second_show['attendance'])"
+    "    a = (first_show['budget'] - second_show['budget'])\n",
+    "    b = (first_show['attendance'] - second_show['attendance'])"
    ]
   },
   {
