--- a/index.ipynb
+++ b/index.ipynb
@@ -398,29 +398,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-419d82a86821>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-419d82a86821>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (first_show['budget'] - second_show['budget'])/\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    a = (first_show['budget'] - second_show['budget'])\n",
-    "    b = (first_show['attendance'] - second_show['attendance'])"
+    "    b = (first_show['attendance'] - second_show['attendance'])\n",
+    "    return a/b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marginal_return_on_budget(first_show, second_show) # 1.5"
    ]
