--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,9 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    "
+    "    a = (first_show['budget'] - second_show['budget'])\n",
+    "    b = (first_show['attendance'] - second_show['attendance'])\n",
+    "    return b/a"
    ]
   },
   {
