--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    a = (x_values[0] - second_show['budget'])\n",
+    "    a = (x_values[0] - x_values[1])\n",
     "    b = (first_show['attendance'] - second_show['attendance'])\n",
     "    return b/a"
    ]
