--- a/index.ipynb
+++ b/index.ipynb
@@ -572,7 +572,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    a = (x_values[0] - x_values[1])\n",
-    "    b = (first_show['attendance'] - second_show['attendance'])\n",
+    "    b = (x_values[0] - x_values[1])\n",
     "    return b/a"
    ]
   },
