--- a/index.ipynb
+++ b/index.ipynb
@@ -566,21 +566,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
     "    a = (x_values[0] - x_values[1])\n",
-    "    b = (x_values[0] - x_values[1])\n",
+    "    b = (y_values[0] - y_values[1])\n",
     "    return b/a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope([200, 400], [400, 700]) # 1.5"
    ]
