Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,15 +566,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to operator (<ipython-input-49-671c14e9963b>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-671c14e9963b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    b/a = m\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+     ]
+    }
+   ],
    "source": [
     "def slope(x_values, y_values):\n",
     "    a = (x_values[0] - x_values[1])\n",
     "    b = (y_values[0] - y_values[1])\n",
-    "    b/a = \n",
-    "    return b/a"
+    "    b/a = m\n",
+    "    return m"
    ]
   },
   {
