--- a/index.ipynb
+++ b/index.ipynb
@@ -616,8 +616,7 @@
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
     "    offset = highest[1] - m*highest[0]\n",
-    "    return offset\n",
-    "    "
+    "    return offset"
    ]
   },
   {
