--- a/index.ipynb
+++ b/index.ipynb
@@ -566,20 +566,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    a = (x_values[0] - x_values[1])\n",
-    "    b = (y_values[0] - y_values[1])\n",
-    "    m = b/a\n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    x1 = sorted_values[0][0]\n",
+    "    y1 = sorted_values[0][1]\n",
+    "    x2 = sorted_values[-1][0]\n",
+    "    y2 = sorted_values[-1][1]\n",
+    "    m = (y2 - y1)/(x2 - x1)\n",
     "    return m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +591,7 @@
        "1.5"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +633,7 @@
        "100.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -649,10 +652,10 @@
     {
      "data": {
       "text/plain": [
-       "-80.0"
+       "10.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
